Replace some labeling tab bar icons with adaptive icons
Use standard text color for the icon text instead of black
with a fat outline

This ensures the icons are always readable regardless of the
system theme, while removing the need for a fixed outline
to make them visible on dark themes

--- a/src/ui/qgstextformatwidgetbase.ui
+++ b/src/ui/qgstextformatwidgetbase.ui
@@ -352,7 +352,7 @@
               <string/>
              </attribute>
             </widget>
-            <widget class="QWidget" name="tab_2">
+            <widget class="QWidget" name="formattingTab">
              <attribute name="icon">
               <iconset resource="../../images/images.qrc">
                <normaloff>:/images/themes/default/propertyicons/labelformatting.svg</normaloff>:/images/themes/default/propertyicons/labelformatting.svg</iconset>
@@ -361,7 +361,7 @@
               <string/>
              </attribute>
             </widget>
-            <widget class="QWidget" name="tab">
+            <widget class="QWidget" name="bufferTab">
              <attribute name="icon">
               <iconset resource="../../images/images.qrc">
                <normaloff>:/images/themes/default/propertyicons/labelbuffer.svg</normaloff>:/images/themes/default/propertyicons/labelbuffer.svg</iconset>
