--- a/images/images.qrc
+++ b/images/images.qrc
@@ -1004,6 +1004,9 @@
         <file>themes/default/mIconSearchWrapAround.svg</file>
         <file>themes/default/mIconSearchRegex.svg</file>
         <file>themes/default/mActionReplace.svg</file>
+        <file>themes/default/mIconLabelText.svg</file>
+        <file>themes/default/mIconLabelFormatting.svg</file>
+        <file>themes/default/mIconLabelBuffer.svg</file>
     </qresource>
     <qresource prefix="/images/tips">
         <file alias="symbol_levels.png">qgis_tips/symbol_levels.png</file>
