Rework label shadow icon
- Make it much clearer that the icon relates to shadows, by
making the shadow the most dominant part of the icon
- Use 'abc' instead of a shield symbol, so that there's no
risk of confusing with the backgrounds icon
- Parameterise, so that it works nicely on light/dark themes

--- a/src/ui/qgstextformatwidgetbase.ui
+++ b/src/ui/qgstextformatwidgetbase.ui
@@ -388,7 +388,7 @@
               <string/>
              </attribute>
             </widget>
-            <widget class="QWidget" name="tab_4">
+            <widget class="QWidget" name="shadowTab">
              <attribute name="icon">
               <iconset resource="../../images/images.qrc">
                <normaloff>:/images/themes/default/propertyicons/labelshadow.svg</normaloff>:/images/themes/default/propertyicons/labelshadow.svg</iconset>
