--- a/images/images.qrc
+++ b/images/images.qrc
@@ -1007,6 +1007,7 @@
         <file>themes/default/mIconLabelText.svg</file>
         <file>themes/default/mIconLabelFormatting.svg</file>
         <file>themes/default/mIconLabelBuffer.svg</file>
+        <file>themes/default/mIconLabelShadow.svg</file>
     </qresource>
     <qresource prefix="/images/tips">
         <file alias="symbol_levels.png">qgis_tips/symbol_levels.png</file>
